<resources>
    <string name="app_name">MdsEmpDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hint_name">Full Name</string>
    <string name="username">User Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="designation">Designation </string>
    <string name="income">Income </string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="department">Department</string>

</resources>
