<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_bg"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/emp_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/emp_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xyz@gmail.com"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/emp_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MDS-123"

                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-35dp"

            android:src="@drawable/img_ok" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lyt_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/card_background_color"
                    app:elevation="2dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_designation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/input_designation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/designation"
                            android:inputType="text"
                            android:maxLength="25"

                            android:textSize="18dp" />
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/card_background_color"
                    app:elevation="2dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_department"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/input_department"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/department"
                            android:inputType="text"
                            android:maxLength="25"
                            android:textSize="18dp" />
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/card_background_color"
                    app:elevation="2dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/input_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:maxLength="12"
                            android:textSize="18dp" />
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/card_background_color"
                    app:elevation="2dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/input_address"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:inputType="textPostalAddress|textMultiLine"
                            android:maxLength="100"
                            android:maxLines="5"
                            android:textSize="18dp" />
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/card_background_color"
                    app:elevation="1dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_income"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/input_income"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/income"
                            android:inputType="number"
                            android:maxLength="8"
                            android:textSize="18dp" />
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
